# DirForge

./: .gitignore  AGENTS.md  Cargo.toml  README.de.md  README.es.md  README.fr.md  README.md  README.zh-CN.md  dirforge.db  dirforge.db-shm  dirforge.db-wal  dirforge_duplicates.csv  dirforge_errors.csv  dirforge_report.txt  dirforge_summary.json  dirotter.db  dirotter.db-shm  dirotter.db-wal  dirotter_errors.csv  findings.md  progress.md  task_plan.md  translation_patch_all_langs.json  translation_patch_view_models_all_langs.json
.github/workflows/: ci.yml  release-windows.yml
crates/dirforge-actions/: Cargo.toml
crates/dirforge-actions/src/: lib.rs
crates/dirforge-app/: Cargo.toml
crates/dirforge-app/src/: main.rs
crates/dirforge-cache/: Cargo.toml
crates/dirforge-cache/src/: lib.rs
crates/dirforge-core/: Cargo.toml
crates/dirforge-core/src/: lib.rs
crates/dirforge-dup/: Cargo.toml
crates/dirforge-dup/src/: lib.rs
crates/dirforge-platform/: Cargo.toml
crates/dirforge-platform/src/: error.rs  fs_meta.rs  lib.rs  trash.rs  volume.rs
crates/dirforge-report/: Cargo.toml
crates/dirforge-report/src/: lib.rs
crates/dirforge-scan/: Cargo.toml
crates/dirforge-scan/src/: aggregator.rs  lib.rs  publisher.rs  walker.rs
crates/dirforge-scan/tests/: integration_scan.rs
crates/dirforge-telemetry/: Cargo.toml
crates/dirforge-telemetry/src/: lib.rs
crates/dirforge-testkit/: Cargo.toml
crates/dirforge-testkit/perf/: baseline.json
crates/dirforge-testkit/src/: lib.rs
crates/dirforge-testkit/tests/: benchmark_thresholds.rs
crates/dirforge-ui/: Cargo.toml
crates/dirforge-ui/src/: lib.rs
crates/dirotter-actions/: Cargo.toml
crates/dirotter-actions/src/: lib.rs
crates/dirotter-app/: Cargo.toml
crates/dirotter-app/src/: main.rs
crates/dirotter-cache/: Cargo.toml
crates/dirotter-cache/src/: lib.rs
crates/dirotter-core/: Cargo.toml
crates/dirotter-core/src/: error.rs  lib.rs  property_tests.rs
crates/dirotter-dup/: Cargo.toml
crates/dirotter-dup/src/: lib.rs
crates/dirotter-platform/: Cargo.toml
crates/dirotter-platform/src/: delete.rs  error.rs  explorer.rs  fs_meta.rs  lib.rs  trash.rs
crates/dirotter-report/: Cargo.toml
crates/dirotter-report/src/: lib.rs
crates/dirotter-scan/: Cargo.toml
crates/dirotter-scan/src/: aggregator.rs  lib.rs  publisher.rs  walker.rs
crates/dirotter-scan/tests/: integration_scan.rs
crates/dirotter-telemetry/: Cargo.toml
crates/dirotter-telemetry/src/: lib.rs
crates/dirotter-testkit/: Cargo.toml
crates/dirotter-testkit/perf/: baseline.json
crates/dirotter-testkit/src/: lib.rs
crates/dirotter-testkit/tests/: benchmark_thresholds.rs
crates/dirotter-ui/: Cargo.toml
crates/dirotter-ui/src/: _translation_source_all.rs  advanced_pages.rs  cleanup.rs  controller.rs  dashboard.rs  dashboard_impl.rs  duplicates_pages.rs  i18n.rs  i18n_generated.rs  i18n_generated_group0.rs  i18n_generated_group1.rs  i18n_generated_group2.rs  i18n_generated_group3.rs  i18n_generated_group3a.rs  i18n_generated_group3b.rs  i18n_missing_keys_patch.rs  lib.rs  result_pages.rs  settings_pages.rs  theme.rs  ui_shell.rs  view_models.rs
dist-gui/: DirOtter-windows-x64-0.1.0-portable.zip.sha256.txt
dist-gui/DirOtter-windows-x64-0.1.0-portable/: BUILD-INFO.json  README.md
dist-gui/DirOtter-windows-x64-0.1.0-portable/docs/: dirotter-install-usage.md
dist-gui/DirOtter-windows-x64-0.1.0-portable/scripts/: uninstall-windows-portable.ps1
docs/: dirforge-comprehensive-assessment.md  dirforge-install-usage.md  dirforge-sdd.md  dirforge-ui-component-spec.md  dirotter-comprehensive-assessment.md  dirotter-install-usage.md  dirotter-production-readiness-report-2026-05-zh.md  dirotter-production-readiness-report-2026-05.md  dirotter-sdd.md  dirotter-ui-component-spec.md  engineering-improvement-plan-2026-04.md  engineering-requirements.md  linux-migration.md  macos-migration.md  production-upgrade-2026-03.md  quickstart.md  release-packaging.md  warp-vs-dirotter-improvement-guide.md
scripts/: build_translation_source.py  generate_ui_translations.py  install-windows-portable.ps1  package-linux-deb.sh  package-linux.sh  package-macos.sh  package-windows.ps1  sign-windows.ps1  validate-template.ps1
