[workspace]
members = [
  "crates/dirforge-app",
  "crates/dirforge-ui",
  "crates/dirforge-core",
  "crates/dirforge-scan",
  "crates/dirforge-dup",
  "crates/dirforge-cache",
  "crates/dirforge-platform",
  "crates/dirforge-actions",
  "crates/dirforge-report",
  "crates/dirforge-telemetry",
  "crates/dirforge-testkit",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["DirForge Team"]

[workspace.dependencies]
eframe = "0.28"
egui = "0.28"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
blake3 = "1"

bincode = "1.3"
zstd = "0.13"
