[workspace]
members = [
  "crates/dirotter-app",
  "crates/dirotter-ui",
  "crates/dirotter-core",
  "crates/dirotter-scan",
  "crates/dirotter-dup",
  "crates/dirotter-cache",
  "crates/dirotter-platform",
  "crates/dirotter-actions",
  "crates/dirotter-report",
  "crates/dirotter-telemetry",
  "crates/dirotter-testkit",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "1.0.1"
license = "MIT"
authors = ["DirOtter Team"]

[workspace.dependencies]
eframe = "0.28"
egui = "0.28"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
walkdir = "2"
blake3 = "1"
rayon = "1"
smol_str = { version = "0.2", features = ["serde"] }
thiserror = "1"
anyhow = "1"

bincode = "1.3"
zstd = "0.13"
