[package]
name = "dirforge-actions"
version.workspace = true
edition.workspace = true

[dependencies]
dirforge-core = { path = "../dirforge-core" }
dirforge-platform = { path = "../dirforge-platform" }
dirforge-telemetry = { path = "../dirforge-telemetry" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
