[package]
name = "dirforge-report"
version.workspace = true
edition.workspace = true

[dependencies]
dirforge-core = { path = "../dirforge-core" }
dirforge-dup = { path = "../dirforge-dup" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rayon.workspace = true
