[package]
name = "dirforge-scan"
version.workspace = true
edition.workspace = true

[dependencies]
dirforge-core = { path = "../dirforge-core" }
dirforge-telemetry = { path = "../dirforge-telemetry" }
serde.workspace = true
walkdir.workspace = true

[dev-dependencies]
dirforge-testkit = { path = "../dirforge-testkit" }
nix = { version = "0.28", default-features = false, features = ["user"] }
