[package]
name = "dirotter-dup"
version.workspace = true
edition.workspace = true

[dependencies]
dirotter-core = { path = "../dirotter-core" }
dirotter-platform = { path = "../dirotter-platform" }
blake3.workspace = true
rayon.workspace = true

[dev-dependencies]
dirotter-testkit = { path = "../dirotter-testkit" }
