[package]
name = "dirotter-platform"
version.workspace = true
edition.workspace = true

[dependencies]
sysinfo = "0.30"
trash = "5"
serde.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Memory", "Win32_System_ProcessStatus", "Win32_System_RemoteDesktop", "Win32_System_SystemInformation", "Win32_System_Threading"] }
